Fixed alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -174,7 +174,7 @@ body {
 
 h1 {
   font-family: 'archia';
-  font-size: 24px !important;
+  font-size: 1em;
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -3503,13 +3503,11 @@ td {
 .subtitle {
   vertical-align: top;
   font-weight: 400;
-  font-size: 0.5em;
 }
 
 
 .titlebanner {
     margin-top: 10px;
-    font-size: 0.8em;
     font-size: small;
     font-weight: 600;
     background-color: cadetblue;
